--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
         <link href="style.css" rel="stylesheet" type="text/css"/>
         <script src="action.js"></script>
     </head>
 
     //make the snake to follow mouse around the screen through empty spaces
-
+    <container>
     <body>
         
     <header>
@@ -114,7 +115,7 @@
             <p>Phone: 501-732-1797</p>
         </div>
     </div>
-
+    </container>
     </body>
 
     
